--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -61,7 +61,7 @@
   border-radius: 5px;
   border-style: solid;
   border-color: black; 
-  background-color: rgb(190, 190, 190);
+  background-color: rgb(255, 255, 255);
 
   cursor: pointer;
   padding: 10px;
@@ -72,7 +72,7 @@
 
 }
 .select2-container:hover{
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 108);
   
   transition: color 0.3s ease
 }
@@ -82,17 +82,23 @@
   color:black;
   
   
-  background-color: rgb(190, 190, 190);
+  background-color: rgb(255, 255, 255);
 }
 
 .select2-results__option--highlighted:hover {
-  color: rgb(255, 255, 255);
+  color: rgb(255, 0, 0);
 
   transition: color 0.3s ease
 }
 
 .custom-select2-dropdown{
   background-color: crimson;
+}
+
+/* New Component labels */
+.InputLabel {
+  font-size: larger;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* New Component form */
@@ -118,6 +124,7 @@
   border-color:burlywood;
   border-style: ridge;
 
-  background-image: url('https://i.redd.it/jdlvwaiyvg581.jpg');
+  background-image: url('https://static.vecteezy.com/system/resources/previews/003/267/214/non_2x/modern-clean-white-background-free-vector.jpg');
   background-position: center;
+  background-size: cover;
 }
