--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,8 +5,10 @@
   --COLOR: #FFF;
   --ERROR: firebrick;
   --INACTIVE: lightgray;
+  --BUTTON-PRESS:#03dac6;
   --LINK-COLOR: whitesmoke;
   --LINK-HOVER: rgba(211, 211, 211, 0.9);
+  --LINK-HOVER-DARK: #455b5f;
   --blog-BGCOLOR: hsla(240, 64%, 27%, 0.65);
   --STATUS-COMPLETE: limegreen;
   --STATUS-OPEN: firebrick;
@@ -14,8 +16,8 @@
   --TABLE-COLOR: #000;
 }
 
-
-.Main-content{
+/* HOME PAGE */
+.Main-Content{
   min-height: 100vh;
 
   display:flex;
@@ -33,13 +35,37 @@
   justify-content: space-evenly;
 }
 
-.Main-button a{
+.Main-button{
   font-size:2vw;
+  background-color:rgba(22, 28, 30, 0.1);
   color:var(--COLOR);
+  border:none;
+  padding: 15px 30px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.Main-button:hover{
+  background-color: var(--LINK-HOVER-DARK);
+  
+}
+
+.Main-button:active{
+  background-color: var(--BUTTON-PRESS);
+  transform: scale(0.95);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2); 
+  filter: blur(2px);
+}
+
+.Main-button a{
   text-decoration: none;
 }
 .Main-button:hover a{
   color:var(--LINK-HOVER)
+}
+
+.blur{
+  filter: blur(5px);
 }
 
 
@@ -144,6 +170,56 @@
 }
 
 
+/* MAIN PAGE FORM */
+
+
+.Main-Form label{
+  font-weight: bold;
+}
+.Main-Form{
+  display:none;
+
+  position: absolute;
+  left:33vw;
+  gap:2%;
+
+  z-index: 10;
+
+  border-radius: 3%;
+
+  align-items: right;
+  text-align: right;
+
+  
+
+  background-image: url('https://static.vecteezy.com/system/resources/previews/003/267/214/non_2x/modern-clean-white-background-free-vector.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.Main-Container{
+  display: flex;
+  flex-direction: column;
+  padding:10vw;
+
+  align-items: center;
+  text-align: center;
+}
+
+/* EXIT BUTTON */
+.Exit-Button{
+  width:16px;
+  height:16px;
+
+  position: absolute;
+  top:2vw;
+  right:2vw;
+}
+
+.Exit-Button:hover{
+  cursor: pointer;
+}
+
 /* NEW COMPONENT TEXT*/
 
 .Group-title{
@@ -154,11 +230,14 @@
 .select2-container  {
   max-height: 50%;
   color:var(--BGCOLOR);
+
   overflow-y: scroll;
   overflow-x:hidden;
+
   border-radius: 5px;
   border-style: solid;
   border-color: black; 
+
   background-color:var(--COLOR);
 
   cursor: pointer;
