--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,6 +66,7 @@
 
 .blur{
   filter: blur(5px);
+  transition: all 0.2s ease;
 }
 
 
@@ -84,7 +85,7 @@
 .dash-header__container{
   display: flex;
   flex-flow: row nowrap;
-  justify-content:space-evenly;
+  justify-content:space-between;
   color:var(--COLOR); 
 }
 .dash-header__title{
@@ -96,8 +97,33 @@
   color:var(--LINK-HOVER);
   text-decoration-line: none;
 }
-.dash-header__button{
+.Dash-Header__Button{
+  font-size:0.8vw;
+  background-color:rgba(22, 28, 30, 0.1);
+  color:var(--COLOR);
+  border:none;
+  padding: 15px 30px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
 
+.Dash-Header__Button:hover{
+  background-color: var(--LINK-HOVER-DARK);
+  
+}
+
+.Dash-Header__Button:active{
+  background-color: var(--BUTTON-PRESS);
+  transform: scale(0.95);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2); 
+  filter: blur(2px);
+}
+
+.Dash-Header__Button a{
+  text-decoration: none;
+}
+.Dash-Header__Button:hover a{
+  color:var(--LINK-HOVER)
 }
 
 .left-content{
@@ -121,6 +147,21 @@
   margin: 0;  
   flex-grow: 1;
   text-align: right;
+}
+.user-icon{
+  background-color:var(--BGCOLOR);
+  border-radius: 5px;
+  border: none;
+}
+.user-icon:hover{
+  background-color:var(--LINK-HOVER-DARK);
+  border: none;
+}
+.user-icon img{
+  width: 1vw;
+  height: 1vh;
+  cursor: pointer;
+  
 }
 
 
@@ -231,9 +272,6 @@
   max-height: 50%;
   color:var(--BGCOLOR);
 
-  overflow-y: scroll;
-  overflow-x:hidden;
-
   border-radius: 5px;
   border-style: solid;
   border-color: black; 
@@ -251,22 +289,27 @@
   transition: color 0.3s ease
 }
 
+.select2-container--open{
+  overflow-y: scroll;
+  overflow-x:hidden;
+}
+
 .select2-results__option{
-  
   color:black;
-  
   background-color: rgb(255, 255, 255);
 }
 
 .select2-results__option--highlighted:hover {
   color: rgb(255, 0, 0);
-
   transition: color 0.3s ease
 }
 
-.custom-select2-dropdown{
-  background-color: crimson;
+.select2-selection__rendered{
+  display:flex;
+  justify-content: center;
 }
+
+
 
 /* NEW COMPONENT LABELS */
 .InputLabel {
@@ -274,6 +317,7 @@
   font-size: larger;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 
 /* New Component form */
 
@@ -355,6 +399,8 @@
   height: 40px;
   cursor: pointer;
 }
+
+
 
 .egg{
   display: none;
